--- a/.github/workflows/build-debug.yaml
+++ b/.github/workflows/build-debug.yaml
@@ -94,7 +94,7 @@ jobs:
           cache: true
       - name: Install build dependencies
         run: |
-          sudo apt-get install -y libxcb-cursor0 libarchive-dev
+          sudo apt-get install -y libxcb-cursor0 libarchive-dev libwayland-dev wayland-protocols
       - name: Build Linux debug build
         env:
           CONFIG: debug
