Include unstable protocol XMLs in repository

--- a/Platform/Linux/Makefile
+++ b/Platform/Linux/Makefile
@@ -3,10 +3,11 @@ include ../../common.mk
 
 WAYLAND_PROTOCOLS_DIR ?= $(shell pkg-config wayland-protocols --variable=pkgdatadir)
 WAYLAND_SCANNER = $(shell pkg-config --variable=wayland_scanner wayland-scanner)
-PROTOCOL_SOURCES := wayland-protocols/cursor-shape-v1.c wayland-protocols/viewporter.c \
-	wayland-protocols/tablet-v2.c wayland-protocols/xdg-shell.c \
-	wayland-protocols/fractional-scale-v1.c wayland-protocols/xdg-output-unstable-v1.c \
-	wayland-protocols/wlr-layer-shell-unstable-v1.c
+PROTOCOL_SOURCES := wayland-protocols/fractional-scale-v1.c \
+	wayland-protocols/xdg-output-unstable-v1.c \
+	wayland-protocols/wlr-layer-shell-unstable-v1.c \
+	wayland-protocols/xdg-shell.c
+PROTOCOL_HEADERS := $(patsubst %.c,%.h,$(PROTOCOL_SOURCES))
 PROTOCOL_OBJECTS := $(patsubst %.c,%.o,$(PROTOCOL_SOURCES))
 WL_PROTO_DIR = wayland-protocols
 SOURCES = $(PROTOCOL_SOURCES) Platform.cc ActiveWindowObserver.cc KWin.cc \
@@ -42,15 +43,15 @@ Linux.a: $(OBJECTS)
 		[ -f node_modules/.bin/minify ]; \
 	fi
 
-wayland-protocols/wlr-layer-shell-unstable-v1.c: wlr-layer-shell-unstable-v1.xml
+wayland-protocols/xdg-shell.c: $(WAYLAND_PROTOCOLS_DIR)/stable/xdg-shell/xdg-shell.xml
 	mkdir -p wayland-protocols
 	target="$@"; $(WAYLAND_SCANNER) client-header $^ "$${target%.*}.h"
-	target="$@"; $(WAYLAND_SCANNER) private-code $^ "$${target}"
+	$(WAYLAND_SCANNER) private-code $^ $@
 
-wayland-protocols/%.c:
+wayland-protocols/%.c: %.xml
 	mkdir -p wayland-protocols
-	target="$@"; base="$$(basename "$${target}")"; $(WAYLAND_SCANNER) client-header $(WAYLAND_PROTOCOLS_DIR)/*/*/"$${base%.*}.xml" "$${target%.*}.h"
-	target="$@"; base="$$(basename "$${target}")"; $(WAYLAND_SCANNER) private-code $(WAYLAND_PROTOCOLS_DIR)/*/*/"$${base%.*}.xml" "$${target}"
+	target="$@"; $(WAYLAND_SCANNER) client-header $^ "$${target%.*}.h"
+	$(WAYLAND_SCANNER) private-code $^ $@
 
 protocols-autogen: $(PROTOCOL_SOURCES)
 
@@ -80,8 +81,9 @@ KDEWindowObserverBackend.cc: kwin_script.c
 	$(call bin2c,$<,$@)
 
 clean::
-	rm -f $(PROTOCOL_SOURCES)
-	rm -rf .work/gnome_script
 	rm -f $(OBJECTS) Linux.a gnome_script.zip kwin_script.c \
 		kwin_script_minified.js gnome_script/extension_minified.js \
 		gnome_script.c
+	rm -f $(PROTOCOL_SOURCES) $(PROTOCOL_HEADERS)
+	rm -rf .work/gnome_script
+	rm -fd wayland-protocols
