--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -9,19 +9,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
           git fetch --unshallow origin $BRANCH_NAME
-          git remote set-url origin "git@github.com:pixelomer/Shijima-Qt"
           pushd libshijima
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
           git fetch --unshallow origin main
-          git remote set-url origin "git@github.com:pixelomer/libshijima"
           echo "libshijima: $(git rev-list HEAD --count) commits"
           popd
       - name: Cache Docker image
@@ -55,26 +49,23 @@ jobs:
     runs-on: ${{ matrix.runner }}
     strategy:
       matrix:
-        runner: [ ubuntu-24.04-arm, ubuntu-20.04 ]
+        runner: [ ubuntu-24.04-arm, ubuntu-22.04 ]
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
           git fetch --unshallow origin $BRANCH_NAME
-          git remote set-url origin "git@github.com:pixelomer/Shijima-Qt"
           pushd libshijima
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
           git fetch --unshallow origin main
-          git remote set-url origin "git@github.com:pixelomer/libshijima"
           echo "libshijima: $(git rev-list HEAD --count) commits"
           popd
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
       - name: Install Qt6
         uses: jdpurcell/install-qt-action@v5
         with:
@@ -87,7 +78,7 @@ jobs:
           cache: true
       - name: Install build dependencies
         run: |
-          sudo apt-get install -y libxcb-cursor0 libarchive-dev
+          sudo apt-get install -y libxcb-cursor0 libarchive-dev libwayland-dev wayland-protocols
       - name: Install build dependencies (arm64)
         if: matrix.runner == 'ubuntu-24.04-arm'
         run: |
@@ -112,19 +103,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Fetch full history for Shijima submodules
         env:
-          PULL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
         run: |
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/Shijima-Qt.git"
           git fetch --unshallow origin $BRANCH_NAME
-          git remote set-url origin "git@github.com:pixelomer/Shijima-Qt"
           pushd libshijima
-          git remote set-url origin "https://${PULL_TOKEN}@github.com/pixelomer/libshijima.git"
           git fetch --unshallow origin main
-          git remote set-url origin "git@github.com:pixelomer/libshijima"
           echo "libshijima: $(git rev-list HEAD --count) commits"
           popd
       - name: Temporarily let gtar run as root
